--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ environment:
   - dependencies: highest
     php_ver_target: 7.2
 
-## Cache composer, chocolatey and php bits
+## Cache composer file
 cache:
     - '%LOCALAPPDATA%\Composer\files -> composer.lock'
 
@@ -47,4 +47,4 @@ install:
 ## Run the actual test
 test_script:
     - cd c:\projects\php-project-workspace
-    - vendor/bin/phpunit -c phpunit.xml.dist
+    - appveyor-retry vendor/bin/phpunit -c phpunit.xml.dist
