Refactored middleware to emit key value array of iterator instead of Metric instances so we can drop the dependency on wyrihaximus/react-inspector

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     },
     "require-dev": {
         "api-clients/test-utilities": "^5.1",
+        "cakephp/collection": "^3.6",
         "ringcentral/psr7": "^1.2.2"
     },
     "autoload": {
